<?xml version="1.0"?>
<package>
  <name>turtleTutorial</name>
  <version>0.0.0</version>
  <description>The turtle_tutorial package for Ethan Quist</description>
  <maintainer email="ethantquist@gmail.com">Ethan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>

</package>
